fixed the overflow sizing for taco recipe text issue so it no longer takes up too much space.

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ button:hover, a:hover, p.recipeLinks:hover {
 }
 
 .recipeImage {
+  margin-top: 10%;
   height: 25%;
 }
 
@@ -177,11 +178,14 @@ button:hover, a:hover, p.recipeLinks:hover {
 }
 
 .recipeTextFront, .recipeTextBack {
-    overflow-x: hidden;
     overflow-y: scroll;
     width: 95%;
-    height: 50%;
     padding: 15px;
+}
+
+.recipeTextFront {
+  height: 52%;
+  margin: 10px;
 }
 
 .recipeTextBack {
